--- a/Web/site.estudos/index.html
+++ b/Web/site.estudos/index.html
@@ -138,6 +138,7 @@
       <div class="ops"> 
           <div class="espaco1">
             <div class="dentro1">
+              <a class="Botao" href="*" >Home</a>
 
             </div>
           </div>
@@ -170,7 +171,11 @@
 
     <script>
       document.write("escrito com document.write")
-    </script>
+    </script><br><br><br><br><br><br><br><br>
+
+    <p style="font-size: 70px; text-align: center;"> Treinando Funcao JS</p>
+    <br><br><br><br><br><br><br><br>
+    
 
     <script src="JS/index.JS"></script>
     </body>
