--- a/Web/site.estudos/index.html
+++ b/Web/site.estudos/index.html
@@ -202,7 +202,7 @@
         <label for="idade">Idade:</label>
         <input type="number" id="idade" name="idade" min="1" required>
 
-        <button id="botao" type="submit">Enviar</button>
+        <button id="botao" type="submit" onclick="Verificaca()">Enviar</button>
       </form>
       <div id="resultado"></div>
     </div>
