--- a/Web/site.estudos/index.html
+++ b/Web/site.estudos/index.html
@@ -210,8 +210,55 @@
 
   <p style="font-size: 70px; text-align: center;"> Treinando EVENTO JS</p>
   <div class="back">
-     <button onclick="Onclick()"> Clique onclick</button>
+    <button onclick="Onclick()"> Clique onclick</button>
   </div>
+  <br><br><br><br><br><br><br><br>
+
+
+
+  <!-- EVENTOS DE TEMPO -->
+  <div class="indicadorTempo">
+    <div class="espacoContagem">
+      <div class="contagem">
+        <p id="contador"> 0</p>
+      </div>
+    </div>
+
+
+  </div>
+
+  <div class="eventosTempo">
+
+    <div class="ParaContagem">
+      <button onclick="ParaContagem()">Para</button>
+
+    </div>
+
+    <div class="ComecaContagem">
+      <button onclick="ComecaContagem()">Começa</button>
+
+    </div>
+
+  </div>
+
+  <br><br><br><br><br><br><br><br>
+
+
+
+
+
+  <div class="cobertura">
+
+    <h1 style="text-align: center;">ESTUDANDO JSON</h1>
+
+
+    <input id="cep" type="text" placeholder="fala meu brow">
+    <button onclick="buscarCep()">vamo procurar pro mano ai</button>
+    <p id="text"></p>
+
+
+  </div>
+
   <br><br><br><br><br><br><br><br>
 
 
