--- a/Web/HTML-CSS-JS/e-comercedemo/carrinho.html
+++ b/Web/HTML-CSS-JS/e-comercedemo/carrinho.html
@@ -20,7 +20,7 @@
     <div class="botaoCarrinho">
 
       <div class="espacoCarrinho">
-        <a href="loja.html" class="btn-carrinho"><i class="mdi mdi-cart-outline"></i>Voltar a Loja</a>
+        <a href="index.html" class="btn-carrinho"><i class="mdi mdi-cart-outline"></i>Voltar a Loja</a>
       </div>
 
     </div>
