--- a/Web/HTML-CSS-JS/e-comercedemo/carrinho.html
+++ b/Web/HTML-CSS-JS/e-comercedemo/carrinho.html
@@ -20,7 +20,8 @@
     <div class="botaoCarrinho">
 
       <div class="espacoCarrinho">
-        <a href="index.html" class="btn-carrinho"><i class="mdi mdi-cart-outline"></i>Voltar a Loja</a>
+        <button  class="botaoCarrinho"  onclick="voltarPagina()"><i class="mdi mdi-cart-outline"></i>Voltar a Loja</button>
+        
       </div>
 
     </div>
