--- a/Web/HTML-CSS-JS/e-comercedemo/index.html
+++ b/Web/HTML-CSS-JS/e-comercedemo/index.html
@@ -21,9 +21,9 @@
         </div>
 
         <div class="botaoCarrinho">
-
             <div class="espacoCarrinho">
-                <a  href="carrinho.html" id="botaoCarrinho" class="btn-carrinho"><i class="mdi mdi-cart-outline"></i>0 Ver Carrinho </a>
+                <a href="carrinho.html" id="botaoCarrinho" class="btn-carrinho"><i class="mdi mdi-cart-outline"></i>0
+                    Ver Carrinho </a>
             </div>
 
         </div>
@@ -48,9 +48,9 @@
 
         </div>
     -->
-        
+
     </div>
-<br>
+    <br>
 
 
 
