--- a/Web/HTML-CSS-JS/e-comercedemo/carrinho.html
+++ b/Web/HTML-CSS-JS/e-comercedemo/carrinho.html
@@ -3,6 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Esse é meu primeiro site!">
+  <meta name="keywords" content="programaçao, css, html, Javascript">
+  <meta name="author" content="Lucas SantAna Dias">
+  <meta charset="UTF-8">
   <title>Carrinho</title>
   <link rel="stylesheet" href="style/estiloteste.css">
 </head>
@@ -20,9 +26,9 @@
     <div class="botaoCarrinho">
 
       <div class="espacoCarrinho">
-        <a  class="botaoCarrinho" href="index.html"> <i class="mdi mdi-cart-outline"></i>Voltar a Loja </a>
+        <a class="botaoCarrinho" href="index.html"> <i class="mdi mdi-cart-outline"></i>Voltar a Loja </a>
         <!-- <button  class="botaoCarrinho"  onclick="voltarPagina()"><i class="mdi mdi-cart-outline"></i>Voltar a Loja</button> -->
-        
+
       </div>
 
     </div>
@@ -47,25 +53,25 @@
       <div class="formularioCardFinal">
         <div class="espacoFrom">
           <label style="font-size: 2rem; font-weight: 500;">Finalizar Pedido</label>
-        <input type="text" id="nome" placeholder="Nome">
-        <input type="text" id="endereco" placeholder="Endereço">
-        <select id="pagamento">
-          <option value="Pix">Pix</option>
-          <option value="Dinheiro">Dinheiro</option>
-          <option value="Cartão">Cartão</option>
-        </select>
-      </div>
-      <div class="espacoBtnZap">
-        <div class="botoesFinais">
-          <div class="finalizar">
-            <button onclick="finalizarPedido()">Finalizar no WhatsApp</button>
+          <input type="text" id="nome" placeholder="Nome">
+          <input type="text" id="endereco" placeholder="Endereço">
+          <select id="pagamento">
+            <option value="Pix">Pix</option>
+            <option value="Dinheiro">Dinheiro</option>
+            <option value="Cartão">Cartão</option>
+          </select>
+        </div>
+        <div class="espacoBtnZap">
+          <div class="botoesFinais">
+            <div class="finalizar">
+              <button onclick="finalizarPedido()">Finalizar no WhatsApp</button>
+            </div>
+
           </div>
+
 
         </div>
 
-
-      </div>
-      
 
 
 
@@ -73,16 +79,16 @@
     </div>
 
 
-  
 
 
-  
-
-  <br><br><br>
 
 
-  <script src="js/carrinho.js"></script>
-  <script src="js/whatsapp.js"></script>
+
+    <br><br><br>
+
+
+    <script src="js/carrinho.js"></script>
+    <script src="js/whatsapp.js"></script>
 </body>
 
 </html>
