--- a/Web/HTML-CSS-JS/e-comercedemo/index.html
+++ b/Web/HTML-CSS-JS/e-comercedemo/index.html
@@ -2,6 +2,12 @@
 <html lang="pt-br">
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Esse é meu primeiro site!">
+    <meta name="keywords" content="programaçao, css, html, Javascript">
+    <meta name="author" content="Lucas SantAna Dias">
     <link rel="stylesheet" href="https://materialdesignicons.com/cdn/1.6.50-dev/css/materialdesignicons.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Lato&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
