--- a/Web/HTML-CSS-JS/e-comercedemo/index.html
+++ b/Web/HTML-CSS-JS/e-comercedemo/index.html
@@ -28,7 +28,7 @@
 
         <div class="botaoCarrinho">
             <div class="espacoCarrinho">
-                <a href="carrinho.html" id="botaoCarrinho" class="btn-carrinho"><i class="mdi mdi-cart-outline"></i>0
+                <a  onclick="primeirosRenderizar()" href="carrinho.html" id="botaoCarrinho" class="btn-carrinho"><i class="mdi mdi-cart-outline"></i>0
                     Ver Carrinho </a>
             </div>
 
