--- a/Web/HTML-CSS-JS/e-comercedemo/carrinho.html
+++ b/Web/HTML-CSS-JS/e-comercedemo/carrinho.html
@@ -23,15 +23,19 @@
       <h1>Seu Pedido</h1>
     </div>
 
+    <div class="quantidadeNoCarrinho">
+      <p id="quantidadeNoCarrinho">0 itens no carrinho</p>
+    </div>
+
     <div class="botaoCarrinho">
 
       <div class="espacoCarrinho">
         <a class="botaoCarrinho" href="index.html"> <i class="mdi mdi-cart-outline"></i>Voltar a Loja </a>
         <!-- <button  class="botaoCarrinho"  onclick="voltarPagina()"><i class="mdi mdi-cart-outline"></i>Voltar a Loja</button> -->
-
       </div>
 
     </div>
+
 
   </div>
 
